# cpp-rasterizer

./: CMakeLists.txt  README.md  RasterizerConfig.h.in
src/: main.cxx
src/MathFunctions/: CMakeLists.txt
src/draw/: CMakeLists.txt  draw.cxx  draw.h  line.cxx  line.h  polygon.cxx  polygon.h
src/gl/: CMakeLists.txt  color.cxx  color.h  framebuffer.cxx  framebuffer.h  gl.h  pixel.cxx  pixel.h  renderer.cxx  renderer.h
